--- a/app/views/end-to-end/post-mvp/eligibility/common/project-start.html
+++ b/app/views/end-to-end/post-mvp/eligibility/common/project-start.html
@@ -56,11 +56,25 @@
                     ]
                 }) }}
 
-                {{ govukButton ({
-                    html: 'Continue'
-                }) }}
+                     <div class="govuk-button-group">
+                    {{ govukButton({
+                        id: 'Continue',
+                        name: 'continue',
+                        text: "Continue"
+                    }) }}   
 
-            </form>
+                </form>
+
+                <form class="signout" style="display:flex;" action="/end-to-end/post-mvp/eligibility/common/sign-out" method="post">
+                    {{ govukButton({
+                        id: 'nosignin',
+                        name: 'nosignin',
+                        text: "Save and come back later",
+                        classes: "govuk-button--secondary"
+                    }) }}
+                </form>
+
+            </div>
 
         </div>
 
