--- a/app/views/end-to-end/post-mvp/eligibility/funding/reference-number.html
+++ b/app/views/end-to-end/post-mvp/eligibility/funding/reference-number.html
@@ -62,9 +62,23 @@
 
           <br>
           <form class="form" action="../../task-list/list-1-3" method="post">
-              {{ govukButton ({
-                    html: 'Continue'
-                }) }}
+                   <div class="govuk-button-group">
+                    {{ govukButton({
+                        id: 'Continue',
+                        name: 'continue',
+                        text: "Continue"
+                    }) }}   
+
+                </form>
+
+                <form class="signout" style="display:flex;" action="/end-to-end/post-mvp/eligibility/common/sign-out" method="post">
+                    {{ govukButton({
+                        id: 'nosignin',
+                        name: 'nosignin',
+                        text: "Save and come back later",
+                        classes: "govuk-button--secondary"
+                    }) }}
+                </form>
           </form>
 
       <p><a href="#" class="govuk-link">What do you think of this service?</a></p>
