--- a/app/views/end-to-end/layout-account.html
+++ b/app/views/end-to-end/layout-account.html
@@ -37,7 +37,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
                 </div>
                 <div class="govuk-grid-column-one-third">
                      <h4 class="govuk-heading-m" style="float:right; margin-bottom: 8px;">John Smith</h4><br>
-                    <p class="govuk-body" style="clear:right; float:right; margin-bottom: 8px;"><a href="log-out">Sign out</a></p>
+                    <p class="govuk-body" style="clear:right; float:right; margin-bottom: 8px;"><a href="/end-to-end/post-mvp/eligibility/common/sign-out">Sign out</a></p>
                 </div>
             </div>
             <hr>
