--- a/app/views/end-to-end/post-mvp/eligibility/common/login.html
+++ b/app/views/end-to-end/post-mvp/eligibility/common/login.html
@@ -99,7 +99,7 @@
 
         <div class="govuk-grid-column-one-third">
 
-            <div class="app-step-nav-related app-step-nav-related--singular">
+            {# <div class="app-step-nav-related app-step-nav-related--singular">
                 <h2 class="app-step-nav-related__heading">
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
@@ -109,7 +109,7 @@
                 <p>
                     Scotland, Wales and Northern Ireland have other grants available.
                 </p>
-            </div>
+            </div> #}
 
         </div>
 
