--- a/app/views/end-to-end/post-mvp/eligibility/funding/current-irrigating.html
+++ b/app/views/end-to-end/post-mvp/eligibility/funding/current-irrigating.html
@@ -42,9 +42,23 @@
         ]
       }) }}
 
-         {{ govukButton ({
-                    html: 'Continue'
-                }) }}
+              <div class="govuk-button-group">
+                    {{ govukButton({
+                        id: 'Continue',
+                        name: 'continue',
+                        text: "Continue"
+                    }) }}   
+
+                </form>
+
+                <form class="signout" style="display:flex;" action="/end-to-end/post-mvp/eligibility/common/sign-out" method="post">
+                    {{ govukButton({
+                        id: 'nosignin',
+                        name: 'nosignin',
+                        text: "Save and come back later",
+                        classes: "govuk-button--secondary"
+                    }) }}
+                </form>
 
       </form>
     </div>
