--- a/app/views/end-to-end/post-mvp/scoring/impact.html
+++ b/app/views/end-to-end/post-mvp/scoring/impact.html
@@ -126,11 +126,25 @@
                 <input type="hidden" name="hasRangeError" value="false">
                 <input type="hidden" name="hasBothError" value="false">
 
-                {{ govukButton ({
-                    html: 'Continue'
-                }) }}
+                     <div class="govuk-button-group">
+                    {{ govukButton({
+                        id: 'Continue',
+                        name: 'continue',
+                        text: "Continue"
+                    }) }}   
 
-            </form>
+                </form>
+
+                <form class="signout" style="display:flex;" action="/end-to-end/post-mvp/eligibility/common/sign-out" method="post">
+                    {{ govukButton({
+                        id: 'nosignin',
+                        name: 'nosignin',
+                        text: "Save and come back later",
+                        classes: "govuk-button--secondary"
+                    }) }}
+                </form>
+
+            </div>
 
         </div>
 
