--- a/app/views/end-to-end/post-mvp/eligibility/funding/irrigated-crops.html
+++ b/app/views/end-to-end/post-mvp/eligibility/funding/irrigated-crops.html
@@ -39,9 +39,23 @@
         ]
        }) }}
 
-        {{ govukButton ({
-          html: 'Continue'
+       <div class="govuk-button-group">
+        {{ govukButton({
+            id: 'Continue',
+            name: 'continue',
+            text: "Continue"
+        }) }}   
+
+    </form>
+
+    <form class="signout" style="display:flex;" action="/end-to-end/post-mvp/eligibility/common/sign-out" method="post">
+        {{ govukButton({
+            id: 'nosignin',
+            name: 'nosignin',
+            text: "Save and come back later",
+            classes: "govuk-button--secondary"
         }) }}
+    </form>
 
         {% if data['COMPLETED'] == true %}
           <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
@@ -51,7 +65,7 @@
           </button>
         {% endif %}
 
-      </form>
+        </div>
     </div>
     
       <div class="govuk-grid-column-one-third">
