--- a/app/views/end-to-end/post-mvp/eligibility/funding/irrigation-system.html
+++ b/app/views/end-to-end/post-mvp/eligibility/funding/irrigation-system.html
@@ -63,9 +63,23 @@
           ]
         }) }}
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+        <div class="govuk-button-group">
+          {{ govukButton({
+              id: 'Continue',
+              name: 'continue',
+              text: "Continue"
+          }) }}   
+  
+      </form>
+  
+      <form class="signout" style="display:flex;" action="/end-to-end/post-mvp/eligibility/common/sign-out" method="post">
+          {{ govukButton({
+              id: 'nosignin',
+              name: 'nosignin',
+              text: "Save and come back later",
+              classes: "govuk-button--secondary"
+          }) }}
+      </form>
 
         {% if data['COMPLETED'] == true %}
           {{ govukButton({
@@ -75,7 +89,7 @@
           }) }}
         {% endif %}
 
-       </form>
+        </div>
     </div>
     
     <div class="govuk-grid-column-one-third">
