--- a/app/views/end-to-end/post-mvp/eligibility/funding/abstraction-licence.html
+++ b/app/views/end-to-end/post-mvp/eligibility/funding/abstraction-licence.html
@@ -65,7 +65,7 @@
                     }) }}
                 </form>
 
-        </form>
+              </div>
     </div>
 
     <div class="govuk-grid-column-one-third govuk-!-padding-top-5">
