--- a/app/views/end-to-end/post-mvp/eligibility/funding/reference-number.html
+++ b/app/views/end-to-end/post-mvp/eligibility/funding/reference-number.html
@@ -70,16 +70,7 @@
                     }) }}   
 
                 </form>
-
-                <form class="signout" style="display:flex;" action="/end-to-end/post-mvp/eligibility/common/application-saved" method="post">
-                    {{ govukButton({
-                        id: 'nosignin',
-                        name: 'nosignin',
-                        text: "Save and come back later",
-                        classes: "govuk-button--secondary"
-                    }) }}
-                </form>
-          </form>
+      </div>
 
       <p><a href="#" class="govuk-link">What do you think of this service?</a></p>
 
