pre-populating business details

--- a/app/views/end-to-end/post-mvp/eligibility/funding/check-details.html
+++ b/app/views/end-to-end/post-mvp/eligibility/funding/check-details.html
@@ -239,7 +239,7 @@
      </div>
     <div class="govuk-grid-row govuk-!-padding-top-8">
         <div class="govuk-grid-column-two-thirds">
-            <form class="form" action="../../task-list/list-1-2" method="post">
+            <form class="form" action="business" method="post">
                 <div class="govuk-button-group">
                     {{ govukButton({
                         id: 'Continue',
