--- a/app/views/end-to-end/post-mvp/eligibility/funding/business-no-login.html
+++ b/app/views/end-to-end/post-mvp/eligibility/funding/business-no-login.html
@@ -9,40 +9,11 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="../../task-list/list-1-2" method="post">
+      <form action="applying" method="post">
 
         <h1 class="govuk-heading-l">
           Business details
         </h1>
-
-
-        {{ govukInput ({
-          id: 'employees',
-          name: 'employees',
-          value: data['employees'] if data['employees'] else '',
-          classes: 'govuk-input--width-10',
-          type: 'text',
-          hint: {
-            text: "Full-time employees, including the owner"
-          },
-          label: {
-            text: 'Number of employees'
-          }
-        }) }}
-
-        {{ govukInput ({
-          id: 'turnover',
-          name: 'turnover',
-          value: data['turnover'] if data['turnover'] else '',
-          classes: 'govuk-input--width-10',
-          type: 'text',
-          hint: {
-            text: "Business turnover (£)"
-          },
-          label: {
-            text: 'Business turnover'
-          }
-        }) }}
 
          {{ govukInput ({
             id: 'project-name',
@@ -59,18 +30,61 @@
           }) }}
 
           {{ govukInput ({
-            id: 'project-postcode',
-            name: 'project-postcode',
-            value: data['project-postcode'] if data['project-postcode'] else '',
-            classes: 'govuk-input--width-10',
-            type: 'project-postcode',
+            id: 'business-name',
+            name: 'business-name',
+            value: data['business-name'] if data['business-name'] else '',
+            classes: 'govuk-input--width-20',
+            type: 'text',
             hint: {
-              text: 'The site postcode where the work will happen'
+              text: "If you’re registered on the Rural Payments system, enter business name as registered"
             },
             label: {
-              text: 'Project postcode'
+              text: 'Business name'
             }
-          }) }}  
+          }) }}
+
+          {{ govukInput ({
+            id: 'employees',
+            name: 'employees',
+            value: data['employees'] if data['employees'] else '',
+            classes: 'govuk-input--width-10',
+            type: 'text',
+            hint: {
+              text: "Full-time employees, including the owner"
+            },
+            label: {
+              text: 'Number of employees'
+            }
+          }) }}
+
+          {{ govukInput ({
+            id: 'turnover',
+            name: 'turnover',
+            value: data['turnover'] if data['turnover'] else '',
+            classes: 'govuk-input--width-10',
+            type: 'text',
+            hint: {
+              text: "Business turnover (£)"
+            },
+            label: {
+              text: 'Business turnover'
+            }
+          }) }}
+
+          {{ govukInput ({
+            id: 'sbi',
+            name: 'sbi',
+            value: data['sbi'] if data['sbi'] else '',
+            classes: 'govuk-input--width-10',
+            type: 'text',
+            hint: {
+              text: "If you do not have an SBI, you will need to get one for full application"
+            },
+            label: {
+              text: 'Single Business Identifier (SBI)'
+            }
+          }) }}
+
        
               <div class="govuk-button-group">
                     {{ govukButton({
