--- a/app/views/end-to-end/post-mvp/eligibility/funding/water-source-2.html
+++ b/app/views/end-to-end/post-mvp/eligibility/funding/water-source-2.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form method="post" action="change-summerabs">
+      <form method="post" action="irrigated-crops">
 
         <h1 class="govuk-heading-l">Water source</h1>
           
