--- a/app/views/end-to-end/post-mvp/eligibility/common/application-saved.html
+++ b/app/views/end-to-end/post-mvp/eligibility/common/application-saved.html
@@ -17,10 +17,10 @@
             <form method="post" action="#">
 
                 <h1 class="govuk-heading-l">
-                    Application progress saved
+                    Your application has been saved
                 </h1>
 
-                 <p>You have saved your progress. Now you can either go to your <a href="#">RPS dashboard</a> or <a href="/end-to-end/post-mvp/eligibility/common/sign-out">sign out</a>.</p>
+                 <p>Return to your <a href="#">account page</a> or <a href="/end-to-end/post-mvp/eligibility/common/sign-out">sign out</a>.</p>
 
             </form>
 
