--- a/app/views/end-to-end/post-mvp/start-page.html
+++ b/app/views/end-to-end/post-mvp/start-page.html
@@ -3,7 +3,7 @@
 {% extends 'end-to-end/layout.html' %}
 
 {% block pageTitle %}
-  Apply for a water management grant
+  Apply for a Water Management grant
 {% endblock %}
 
 {% block content %}
@@ -12,10 +12,10 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Apply for a water management grant
+        Apply for a Water Management grant
       </h1>
 
-      <p>Use this service to apply for a water management grant.</p>
+      <p>Use this service to apply for a Water Management grant</p>
       {{ govukInsetText({
         text: "This is round 3 of the water management grant. Applications    
           must be submitted by 11.59pm on 3 February 2025"
