--- a/app/views/end-to-end/post-mvp/start-page.html
+++ b/app/views/end-to-end/post-mvp/start-page.html
@@ -34,8 +34,8 @@
           <h2 class="govuk-heading-m">Before you apply</h2>
             <p>Read the latest guidance on the water management grant to learn about our grant funding priorities.</p>  
 
-            <p>What you'll need:</p>
-            <p>You’ll need to give us:</p>
+            <h2 class="govuk-heading-m">What you'll need:</h2>
+            <p>You'll need to give us:</p>
             <ul class="govuk-list govuk-list--bullet">
               <li>information about your business (for example, number of employees and turnover)</li>
               <li>information about the project (for example, irrigated land in hectares)</li>
