--- a/app/views/end-to-end/post-mvp/eligibility/common/application-saved.html
+++ b/app/views/end-to-end/post-mvp/eligibility/common/application-saved.html
@@ -20,7 +20,9 @@
                     Your application has been saved
                 </h1>
 
-                 <p>Return to your <a href="#">account page</a> or <a href="/end-to-end/post-mvp/eligibility/common/sign-out">sign out</a>.</p>
+                <p>Any information you entered has been saved.</p>
+
+                 <p>You can <a href="javascript:history.back()">return to your application</a>, view your <a href="#">Rural Payments account</a>  or <a href="/end-to-end/post-mvp/eligibility/common/sign-out">sign out</a>.</p>
 
             </form>
 
