new task list design

--- a/app/views/end-to-end/post-mvp/task-list/list-1-0-new.html
+++ b/app/views/end-to-end/post-mvp/task-list/list-1-0-new.html
@@ -20,24 +20,24 @@
         <div class="govuk-grid-column-two-thirds">
 
            <span class="govuk-caption-xl">Browns Hill Farm reservoir (WM-VMA-1234)</span>
-            <h1 class="govuk-heading-xl">Water Management Grant - Round 3</h1>
-
-            <span class="content-section">
-                <!-- EOI approved, application ready to start -->
-                <h3 class="govuk-heading-m">You can start your expression of interest</h3>
-                <div class="govuk-inset-text">
-                    Application deadline is 11:59pm on <strong>7 Jan 2025</strong>.
-                </div>
-            </span>
+            <h1 class="govuk-heading-xl">Apply for a Water Management grant</h1>
 
             <ol class="govuk-prototype-kit-task-list">
             <li>
 
                 <!-- EOI Scenario 3b -->
                 <h2 class="govuk-prototype-kit-task-list__section">
-                    <span class="govuk-prototype-kit-task-list__section-number">1. </span> Expression of interest
+                    <span class="govuk-prototype-kit-task-list__section-number">1. </span> Tell us about your project
                 </h2>
-                
+                {# <span class="content-section">
+                    <!-- EOI approved, application ready to start -->
+                    <h3 class="govuk-heading-m">You can start your expression of interest</h3>
+                    <div class="govuk-inset-text">
+                        Application deadline is 11:59pm on <strong>7 Jan 2025</strong>.
+                    </div>
+                </span> #}
+                <p>You must complete this stage by 11.59pm on <strong>3 February 2025</strong></p>
+                    {# Application deadline is 11:59pm on <strong>7 Jan 2025</strong> #}
                 <ul class="govuk-task-list">
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
@@ -160,41 +160,7 @@
         </li>
         <li>
 
-            <!-- Claim 01 Scenario 1 -->
-            <h2 class="govuk-prototype-kit-task-list__section">
-            <span class="govuk-prototype-kit-task-list__section-number">4. </span> Submit first claim
-            </h2>
-            
-            <ul class="govuk-task-list">
-            <li class="govuk-task-list__item">
-                <div class="govuk-task-list__name-and-hint">
-                <div>Download claim form</div>
-                </div>
-                <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-01-1-status">
-                Cannot start yet
-                </div>
-            </li>
-
-            <li class="govuk-task-list__item">
-                <div class="govuk-task-list__name-and-hint">
-                <div>Upload claim form and evidence</div>
-                </div>
-                <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-01-2-status">
-                Cannot start yet
-                </div>
-            </li>
-
-            <li class="govuk-task-list__item">
-                <div class="govuk-task-list__name-and-hint">
-                <div>Submit claim</div>
-                </div>
-                <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-01-3-status">
-                Cannot start yet
-                </div>
-            </li>
-        </ul>
-
-    </li>
+   </li>
 </ol>
     
     
