--- a/app/views/end-to-end/post-mvp/eligibility/common/login.html
+++ b/app/views/end-to-end/post-mvp/eligibility/common/login.html
@@ -63,6 +63,9 @@
                                 text: "Sign in"
                             }) }}
 
+                        </form>
+
+                        <form class="signout" style="display:flex;" action="farming-type" method="post">
                             {{ govukButton({
                                 id: 'nosignin',
                                 name: 'nosignin',
@@ -70,6 +73,7 @@
                                 text: "Continue without signing in",
                                 classes: "govuk-button--secondary"
                             }) }}
+                        </form>
                         </div>
 
                         <p><a href="#">Forgotten your password?</a></p>
