--- a/app/views/end-to-end/post-mvp/eligibility/common/sign-out.html
+++ b/app/views/end-to-end/post-mvp/eligibility/common/sign-out.html
@@ -21,7 +21,7 @@
                     You've signed out
                 </h1>
 
-                {# <p>You have signed out. Go to some other stuff here.</p> #}
+                <p>Any information you entered has been saved.</p>
                 
                 <p>You can return to your grant application through:</p>
                 <ul class="govuk-list govuk-list--bullet">
