--- a/app/views/end-to-end/post-mvp/task-list/list-1-0-new.html
+++ b/app/views/end-to-end/post-mvp/task-list/list-1-0-new.html
@@ -79,7 +79,7 @@
                 <li>
                     <!-- Application Scenario 2a -->
                 <h2 class="govuk-prototype-kit-task-list__section">
-                    <span class="govuk-prototype-kit-task-list__section-number">2. </span> Apply
+                    <span class="govuk-prototype-kit-task-list__section-number">2. </span> Prepare your application
                 </h2>
 
                 <ul class="govuk-task-list">
@@ -126,7 +126,7 @@
 
             <!-- Agreement Scenario 1 -->
             <h2 class="govuk-prototype-kit-task-list__section">
-            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
+            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit your application
             </h2>
 
             <ul class="govuk-task-list">
