--- a/app/views/end-to-end/post-mvp/start-page.html
+++ b/app/views/end-to-end/post-mvp/start-page.html
@@ -52,6 +52,8 @@
         isStartButton: true
       }) }}
 
+      <p><a href="#">Continue an application you've started</a></p>
+
         {# <h2 class="govuk-heading-m">Before you start</h2>
           <p>You need:</p>
           <ul class="govuk-list govuk-list--bullet">
