--- a/app/views/end-to-end/post-mvp/task-list/list-1-2-new.html
+++ b/app/views/end-to-end/post-mvp/task-list/list-1-2-new.html
@@ -36,27 +36,27 @@
                     <div class="govuk-task-list__name-and-hint">
                     <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp/eligibility/funding/check-details" aria-describedby="expression-of-interest-1-status">Enter your organisation's details</a>
                     </div>
-                    <div class="govuk-task-list__status" id="expression-of-interest-1-status">
+                        <div class="govuk-task-list__status" id="expression-of-interest-1-status">
+                            Completed
+                     </div>
+                </li>
+                <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                    <div class="govuk-task-list__name-and-hint">
+                        <a class="govuk-link govuk-task-list__link" href="../eligibility/common/farming-type" aria-describedby="expression-of-interest-2-status">Check your project meets our funding priorities</a>
+                    </div>
+                    <div class="govuk-task-list__status" id="expression-of-interest-2-status">
+                        Completed
+                 </div>
+                </li>
+                <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                    <div class="govuk-task-list__name-and-hint">
+                        <a class="govuk-link govuk-task-list__link" href="../eligibility/funding/consent" aria-describedby="expression-of-interest-3-status">Submit your project details for us to review</a>
+                    </div>
+                    <div class="govuk-task-list__status" id="expression-of-interest-3-status">
                         <strong class="govuk-tag govuk-tag--blue">
                             Not yet started
                         </strong>
-                    </div>
-                </li>
-                <li class="govuk-task-list__item">
-                    <div class="govuk-task-list__name-and-hint">
-                        Check your project meets our funding priorities
-                    </div>
-                    <div class="govuk-task-list__status" id="expression-of-interest-2-status">
-                        Cannot start yet
-                    </div>
-                </li>
-                <li class="govuk-task-list__item">
-                    <div class="govuk-task-list__name-and-hint">
-                        Submit your project details for us to review
-                    </div>
-                    <div class="govuk-task-list__status" id="expression-of-interest-3-status">
-                        Cannot start yet
-                    </div>
+                 </div>
                 </li>
                 {# <li class="govuk-task-list__item">
                     <div class="govuk-task-list__name-and-hint">
